admin tools in GUI and recipe and config changes